--- a/src/App.module.css
+++ b/src/App.module.css
@@ -16,3 +16,15 @@
   transform: translateY(-50%);
   margin-bottom: 2.3125rem;
 }
+
+.taskList {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.task {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
